# chat-app

./: .dockerignore  .gitignore  ALL_ISSUES_RESOLVED.md  BASE64_FIX_COMPLETE.md  BUG_FIXES.md  BUG_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  CODE_VISIBILITY_FIX.md  CONVERSATION_ARCHITECTURE.md  CONVERSATION_MANAGEMENT.md  CONVERSATION_QUICKSTART.md  CSV_ANALYSIS_GUIDE.md  CSV_ARCHITECTURE_VISUAL.md  CSV_CHAT_COMPLETE_FIX.md  CSV_CODE_VISIBILITY_DIAGRAM.md  CSV_FINAL_CHECKLIST.md  CSV_FLOW_VISUAL_GUIDE.md  CSV_IMPLEMENTATION_SUMMARY.md  CSV_ISSUES_RESOLVED.md  CSV_QUICKSTART.md  CSV_README.md  CSV_TEST_DATA.md  DATABASE_FIX_COMPLETE.md  DOCS_INDEX.md  DOCS_INDEX_CONVERSATIONS.md  FEEDBACK_FEATURE.md  FEEDBACK_IMPLEMENTATION.md  FEEDBACK_INDEX.md  FEEDBACK_QUICKSTART.md  FEEDBACK_README.md  FEEDBACK_SUMMARY.md  FEEDBACK_VISUAL_GUIDE.md  FIXES_QUICK_REFERENCE.md  HEATMAP_FIX_COMPLETE.md  HEATMAP_FIX_QUICK.md  IGNORE_FILES.md  IMAGE_CHAT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MCP_COMPARISON.md  (+28 more)
chat-service/: .dockerignore  .env.example  Dockerfile  code_executor.py  data_analysis_agent.py  main.py  pyproject.toml  requirements.txt
frontend/: .dockerignore  .env.local.example  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  page_backup.tsx
frontend/src/components/: CSVUpload.tsx  ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx
storage-service/: .dockerignore  add_feedback_column.py  add_plots_column.py  check_timezone.py  database.py  main.py  migrate_db.py  models.py  pyproject.toml  requirements.txt  schemas.py
(+1 files in other folders)
