[project]
name = "chat-service"
version = "1.0.0"
description = "Chat service with LLM integration and vision support"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.5.0",
    "httpx>=0.25.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
